--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="../project-1/images/carousel1.jpg" width="640" height="500"
+                <img class="d-block w-100" src="images/carousel1.jpg" width="640" height="500"
                     alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../project-1/images/carousel2.jpg" width="640" height="500"
+                <img class="d-block w-100" src="images/carousel2.jpg" width="640" height="500"
                     alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../project-1/images/carousel3.jpeg" width="640" height="500"
+                <img class="d-block w-100" src="images/carousel3.jpeg" width="640" height="500"
                     alt="Third slide">
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -83,22 +83,22 @@
         <h2 class="rowHeader">My List</h2>
         <div class="row">
             <div class="col-md-2">
-                <img src="../project-1/images/horror1.jpeg" class="thumb" /> 
+                <img src="images/horror1.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror2.jpeg" class="thumb" /> 
+                <img src="images/horror2.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror3.jpeg" class="thumb" /> 
+                <img src="images/horror3.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror4.jpeg" class="thumb" /> 
+                <img src="images/horror4.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror5.jpeg" class="thumb" /> 
+                <img src="images/horror5.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror6.jpeg" class="thumb" /> 
+                <img src="images/horror6.jpeg" class="thumb" /> 
             </div>
         </div>
     </div>
@@ -107,22 +107,22 @@
         <h2 class="rowHeader">Action</h2>
         <div class="row">
             <div class="col-md-2">
-                <img src="../project-1/images/action1.jpeg" class="thumb" /> 
+                <img src="images/action1.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/action2.jpeg" class="thumb" /> 
+                <img src="images/action2.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/action3.jpeg" class="thumb" /> 
+                <img src="images/action3.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/action4.jpeg" class="thumb" /> 
+                <img src="images/action4.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/action5.jpeg" class="thumb" /> 
+                <img src="images/action5.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/action6.jpeg" class="thumb" /> 
+                <img src="images/action6.jpeg" class="thumb" /> 
             </div>
         </div>
     </div>
@@ -131,22 +131,22 @@
         <h2 class="rowHeader">Thrillers</h2>
         <div class="row">
             <div class="col-md-2">
-                <img src="../project-1/images/thriller1.jpeg" class="thumb" /> 
+                <img src="images/thriller1.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/thriller2.jpeg" class="thumb" /> 
+                <img src="images/thriller2.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/thriller3.jpeg" class="thumb" /> 
+                <img src="images/thriller3.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/thriller4.jpeg" class="thumb" /> 
+                <img src="images/thriller4.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/thriller5.jpeg" class="thumb" /> 
+                <img src="images/thriller5.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/thriller6.jpeg" class="thumb" /> 
+                <img src="images/thriller6.jpeg" class="thumb" /> 
             </div>
         </div>
     </div>
@@ -155,22 +155,22 @@
         <h2 class="rowHeader">Horror</h2>
         <div class="row">
             <div class="col-md-2">
-                <img src="../project-1/images/horror1.jpeg" class="thumb" /> 
+                <img src="images/horror1.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror2.jpeg" class="thumb" /> 
+                <img src="images/horror2.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror3.jpeg" class="thumb" /> 
+                <img src="images/horror3.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror4.jpeg" class="thumb" /> 
+                <img src="images/horror4.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror5.jpeg" class="thumb" /> 
+                <img src="images/horror5.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/horror6.jpeg" class="thumb" /> 
+                <img src="images/horror6.jpeg" class="thumb" /> 
             </div>
         </div>
     </div>
@@ -179,22 +179,22 @@
         <h2 class="rowHeader">Animated</h2>
         <div class="row">
             <div class="col-md-2">
-                <img src="../project-1/images/animated1.jpeg" class="thumb" /> 
+                <img src="images/animated1.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/animated2.jpeg" class="thumb" /> 
+                <img src="images/animated2.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/animated3.jpeg" class="thumb" /> 
+                <img src="images/animated3.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/animated4.jpeg" class="thumb" /> 
+                <img src="images/animated4.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/animated5.jpeg" class="thumb" /> 
+                <img src="images/animated5.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/animated6.jpeg" class="thumb" /> 
+                <img src="images/animated6.jpeg" class="thumb" /> 
             </div>
         </div>
     </div>
@@ -203,22 +203,22 @@
         <h2 class="rowHeader">Comedies</h2>
         <div class="row">
             <div class="col-md-2">
-                <img src="../project-1/images/comedy1.jpeg" class="thumb" /> 
+                <img src="images/comedy1.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/comedy2.jpeg" class="thumb" /> 
+                <img src="images/comedy2.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/comedy3.jpeg" class="thumb" /> 
+                <img src="images/comedy3.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/comedy4.jpeg" class="thumb" /> 
+                <img src="images/comedy4.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/comedy5.jpeg" class="thumb" /> 
+                <img src="images/comedy5.jpeg" class="thumb" /> 
             </div>
             <div class="col-md-2">
-                <img src="../project-1/images/comedy6.jpeg" class="thumb" /> 
+                <img src="images/comedy6.jpeg" class="thumb" /> 
             </div>
         </div>
     </div>
