--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     TV Shows
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#mylist">Coming Soon!</a>
+                    <a class="dropdown-item" href="#tv-shows">More Coming Soon!</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -44,6 +44,7 @@
                     <a class="dropdown-item" href="#comedies">Comedies</a>
                     <a class="dropdown-item" href="#horror">Horror</a>
                     <a class="dropdown-item" href="#thrillers">Thrillers</a>
+                    <a class="dropdown-item" href="#recently-added">Recently Added</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -52,7 +53,7 @@
                     Recently Added
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#mylist">Coming Soon!</a>
+                    <a class="dropdown-item" href="#recently-added">More Coming Soon!</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -68,7 +69,9 @@
 
 
 <body>
-    <div class="overlay navbar-brand"><h1>NICKFLIX</h1></div>
+    <div class="overlay navbar-brand">
+        <h1>NICKFLIX</h1>
+    </div>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -235,6 +238,54 @@
         </div>
     </div>
 
+    <div class="container-fluid">
+        <h2 id="tv-shows" class="rowHeader">TV Shows</h2>
+        <div class="row">
+            <div class="col-md-2">
+                <img src="images/tv1.png" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/tv2.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/tv3.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/tv4.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/tv5.webp" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/tv6.jpg" class="thumb" />
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <h2 id="recently-added" class="rowHeader">Recently Added</h2>
+        <div class="row">
+            <div class="col-md-2">
+                <img src="images/mylist3.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/mylist6.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/mylist1.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/mylist2.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/mylist4.jpg" class="thumb" />
+            </div>
+            <div class="col-md-2">
+                <img src="images/mylist5.jpg" class="thumb" />
+            </div>
+        </div>
+    </div>
+
     <footer id="footer" class="footer-1">
         <div class="main-footer widgets-dark typo-light">
             <div class="container">
@@ -243,7 +294,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="widget subscribe no-box">
                             <h5 class="widget-title">NICKFLIX<span></span></h5>
-                            <p>YOU ONLY WATCH WHAT I LIKE</p>
+                            <p>YOU ONLY WATCH WHAT<br> I WANT YOU TO</p>
                         </div>
                     </div>
 
