--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="images/carousel1.jpg" width="640" height="600" alt="Third slide">
             </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel4.jpg" width="640" height="600" alt="Fourth slide">
+            </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
