--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <img src="images/tv4.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/tv5.webp" class="thumb" />
+                <img src="images/tv5.png" class="thumb" />
             </div>
             <div class="col-md-2">
                 <img src="images/tv6.jpg" class="thumb" />
