--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         </div>
     </div>
 
+    <a id="mylist"></a>
     <div class="container-fluid">
         <h2 id="mylist" class="rowHeader">My List</h2>
         <div class="row">
@@ -116,11 +117,12 @@
                 <img src="images/horror5.jpeg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/horror6.jpg" class="thumb" />
+                <img src="images/horror6.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <<a id="action"></a>
     <div class="container-fluid">
         <h2 id="action" class="rowHeader">Action</h2>
         <div class="row">
@@ -140,11 +142,12 @@
                 <img src="images/action5.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/action6.jpg" class="thumb" />
+                <img src="images/action6.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <a id="thrillers"></a>
     <div class="container-fluid">
         <h2 id="thrillers" class="rowHeader">Thrillers</h2>
         <div class="row">
@@ -164,11 +167,12 @@
                 <img src="images/thriller5.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/thriller6.jpg" class="thumb" />
+                <img src="images/thriller6.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <a id="horror"></a>
     <div class="container-fluid">
         <h2 id="horror" class="rowHeader">Horror</h2>
         <div class="row">
@@ -188,11 +192,12 @@
                 <img src="images/horror11.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/horror12.jpg" class="thumb" />
+                <img src="images/horror12.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <a id="animated"></a>
     <div class="container-fluid">
         <h2 id="animated" class="rowHeader">Animated</h2>
         <div class="row">
@@ -212,13 +217,14 @@
                 <img src="images/animated5.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/animated6.jpg" class="thumb" />
+                <img src="images/animated6.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <a id="comedies"></a>
     <div class="container-fluid">
-        <h2 id="comedies" class="rowHeader">Comedies</h2>
+        <h2  class="rowHeader">Comedies</h2>
         <div class="row">
             <div class="col-md-2">
                 <img src="images/comedy1.jpg" class="thumb" />
@@ -236,11 +242,12 @@
                 <img src="images/comedy5.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/comedy6.jpg" class="thumb" />
+                <img src="images/comedy6.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <a id="tv-shows"></a>
     <div class="container-fluid">
         <h2 id="tv-shows" class="rowHeader">TV Shows</h2>
         <div class="row">
@@ -260,11 +267,12 @@
                 <img src="images/tv5.png" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/tv6.jpg" class="thumb" />
+                <img src="images/tv6.jpg" class="thumb six" />
             </div>
         </div>
     </div>
 
+    <a id="recently-added"></a>
     <div class="container-fluid">
         <h2 id="recently-added" class="rowHeader">Recently Added</h2>
         <div class="row">
@@ -284,7 +292,7 @@
                 <img src="images/mylist4.jpg" class="thumb" />
             </div>
             <div class="col-md-2">
-                <img src="images/mylist5.jpg" class="thumb" />
+                <img src="images/mylist5.jpg" class="thumb six" />
             </div>
         </div>
     </div>
