--- a/index.html
+++ b/index.html
@@ -394,8 +394,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"
         integrity="sha256-XmdRbTre/3RulhYk/cOBUMpYlaAp2Rpo/s556u0OIKk=" crossorigin="anonymous"></script>
 
-    <script src="js/index.js">
-    </script>
+
+    <script src="js/index.js"></script>
+    <!-- <script>
+        document.body.innerHTML += `<script src="åjs/index.js?v=${Math.random()}"></script>`);
+    </script> -->
 </body>
 
 </html>
