--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <a class="nav-link" href="#mylist">My List</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form id="searchForm" class="form-inline my-2 my-lg-0" action="javascript:scrollToSearch();">
+            <input id ="searchItem" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" onsearch="scrollToSearch()">
+            <button class="btn btn-outline-success my-2 my-sm-0" onclick="document.getElementById('searchForm').submit(); return false;">Search</button>
         </form>
     </div>
 </nav>
